[package]
name = "mirror-catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
void = "1.0.2"
walkdir = "2.4.0"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"

[dev-dependencies]
serial_test = "2.0.0"
tokio-test = "0.4.3" 
mockito = "1.2.0"

[lib]
name = "mirror_catalog"
path = "src/lib.rs"
